# cs61a

./: LICENSE  README.md  pyproject.toml
homework/hw01/: .ok_history  construct_check.py  hw01.py
homework/hw02/: hw02.py
homework/hw03/: hw03.py
homework/hw04/: .ok_history  .ok_storage  hw04.py
homework/hw05/: hw05.py
lab/lab00/tests/: python-basics.py
lab/lab01/: lab01.py
lab/lab01/tests/: control.py  debugging-quiz.py  short-circuit.py
lab/lab02/: .ok_messages  lab02.py
lab/lab03/: .ok_messages  lab03.py
lab/lab04/: .ok_history  lab04.py
lab/lab05/: .ok_history  .ok_storage  lab05.py
lab/lab06/: .ok_history  construct_check.py  lab06.py
lab/lab06/tests/: iterators-wwpd.py  list-mutation.py
labs/lab00/: lab00.py
project/hog/: .ok_history  .ok_storage  hog.py
